--- a/playbook.yml
+++ b/playbook.yml
@@ -4,9 +4,10 @@
     github: https://github.com/nleiva
     repository: anscible-scm-test
     default_path: /output
-    # Re-use Network credential type
-    user: "{{ lookup('ansible.builtin.env', 'ANSIBLE_NET_USERNAME') }}"
-    token: "{{ lookup('ansible.builtin.env', 'ANSIBLE_NET_PASSWORD') }}"
+    # Re-use VMware cloud credential type
+    user: "{{ lookup('ansible.builtin.env', 'VMWARE_USER') }}"
+    token: "{{ lookup('ansible.builtin.env', 'VMWARE_PASSWORD') }}"
+    email: "{{ lookup('ansible.builtin.env', 'VMWARE_HOST') }}"
 
   tasks:
     - name: Retrieve host vars with default access
@@ -21,7 +22,7 @@
 
     - name: Touch a file, using symbolic modes to set the permissions (equivalent to 0644)
       ansible.builtin.file:
-        path: "{{ default_path }}/{{ repository }}/{{ ansible_date_time.iso8601_micro   }}"
+        path: "{{ default_path }}/{{ repository }}/{{ ansible_date_time.iso8601_micro }}"
         state: touch
         mode: u=rw,g=r,o=r
 
